Integrate Prisma for database management and enhance user registration
- Added DATABASE_URL to env.example for database connection.
- Updated index.js to remove mock database initialization, now handled by Prisma.
- Refactored adminController, audioController, authController, catalogController, editionController, karchagController, newsController, searchController, textController, timelineController, videoController to utilize Prisma for database operations.
- Implemented user registration functionality in authController with validation and error handling.
- Enhanced frontend AuthContext to support user registration and updated Login component for registration flow.

--- a/backend/env.example
+++ b/backend/env.example
@@ -4,3 +4,5 @@ JWT_EXPIRATION=1h
 JWT_REFRESH_EXPIRATION=7d
 BASE_URL=http://localhost:3000
 CORS_ORIGIN=*
+
+DATABASE_URL =postgresql://postgres:123@localhost:5432/karchag_db1?schema=public
