Refactor catalog and text management, remove unused components
- Updated routes to reflect new category structure, changing '/catalog' to '/categories'.
- Removed editionController and associated routes as part of cleanup.
- Refactored catalogController to eliminate text checks, now managed through KarchagText model.
- Enhanced admin dashboard and related components to remove references to editions and texts.
- Added new text summary functionality in karchagController and updated related routes.
- Improved frontend components to align with new API structure and removed deprecated components.

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "dev:js": "nodemon index.js",
     "build": "tsc",
     "type-check": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed:timeline": "node seeders/timelineSeeder.js"
   },
   "author": "",
   "license": "ISC",
