--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -26,7 +26,7 @@
   "include": [
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "prisma/database.js"  ],
   "exclude": [
     "node_modules",
     "dist",
