--- a/backend/env.example
+++ b/backend/env.example
@@ -6,3 +6,12 @@ BASE_URL=http://localhost:3000
 CORS_ORIGIN=*
 
 DATABASE_URL =postgresql://postgres:123@localhost:5432/karchag_db1?schema=public
+
+# AWS S3 Configuration
+S3_REGION=us-east-1
+S3_BUCKET=your-bucket-name
+S3_ACCESS_KEY_ID=your-access-key-id
+S3_SECRET_ACCESS_KEY=your-secret-access-key
+S3_UPLOAD_PREFIX=uploads
+# Optional: Set ACL if your bucket allows it (e.g., 'public-read'). Leave empty if ACLs are disabled.
+S3_ACL=public-read
