--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,8 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "vis-data": "^8.0.3",
+    "vis-timeline": "^8.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -52,6 +54,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/vis": "^4.21.27",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
